<resources> <!-- TODO: sort strings -->
    <string name="app_name">SprintSync</string>

    <!-- Units -->
    <string name="unit_km">km</string>
    <string name="unit_kcal">Kcal</string>
    <string name="unit_min_per_km">min/km</string>
    <string name="unit_min">min</string>
    <string name="unit_kg">kg</string>

    <string name="start_run_desc">Start run</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="parameters">Parameters</string>
    <string name="steps">steps</string>
    <string name="week_goal">Week goal</string>

    <string name="percent_formatted">%d%%</string>
    <string name="today">Today:&#32;</string>
    <string name="record_board">RECORD BOARD</string>
    <string name="workouts">Workouts</string>

    <string name="runs">Runs</string>
    <string name="best_results">Best results</string>
    <string name="distance">Distance</string>
    <string name="best_pace">Best pace</string>
    <string name="pace">pace</string>
    <string name="move_back">Move back</string>
    <string name="start_time">00:00:00</string>
    <string name="start">start</string>
    <string name="allow">Allow</string>
    <string name="binding_init_error">Binding isn\'t initialised</string>
    <string name="service_isn_t_initialised">Service isn\'t initialised</string>
    <string name="settings">Settings</string>
    <string name="pause">Pause</string>
    <string name="delete_track">Delete track</string>
    <string name="great_job">Great job!</string>
    <string name="pace_track">Pace track</string>
    <string name="duration">Duration</string>
    <string name="avg_pace">Avg. pace</string>
    <string name="burned_kcal">Burned kcal</string>
    <string name="on_map">On map</string>
    <string name="map_preview">map preview</string>
    <string name="empty_logs_state_title">Ready to hit the track? \n Your running journey starts here!</string>
    <string name="empty_logs_state_description">No runs logged yet. Lace up your shoes, step outside, and start your adventure. Track your progress and enjoy the journey!</string>
    <string name="location_request_title">Location usage</string>
    <string name="location_request_description">Location access is essential for our app to work correctly. This will allow us to map your routes and provide accurate stats.</string>
    <string name="loading_description">Please wait a moment, we are loading data.</string>
    <string name="to_settings">To settings</string>
    <string name="weekly_overview_title">Weekly overview</string>
    <string name="chart_is_not_initialized">Chart is not initialized</string>
    <string name="previous_range">Previous range</string>
    <string name="next_range">Next range</string>
    <string name="general_overview">General overview</string>
    <string name="total_distance">Total distance</string>
    <string name="total_duration">Total duration</string>
    <string name="total_burned_kcal">Total burned kcal</string>
    <string name="total_workout_days">Total workout days</string>
    <string name="max_workout_streak">Max workout streak</string>
    <string name="best_distance">Longest distance</string>
    <string name="workout_days">Workout days</string>
    <string name="total_workouts">Total workouts</string>
    <string name="update_goals">Update goals</string>
    <string name="daily_goals">Daily goals</string>
    <string name="save">Save</string>
    <string name="last_update">Last update:</string>
    <string name="auto_recalculate">Auto recalculate</string>
    <string name="adjust_to_my_parameters">Adjust to My Parameters</string>
    <string name="apply">Apply</string>
    <string name="general_goal">Wellness Aim</string>
    <string name="spinner_adapter_init_error">Spinner adapter isn\'t initialized</string>
    <string name="personal">Personal</string>
    <string name="birth_date">Birth date</string>
    <string name="weight">Weight</string>
    <string name="use_run_stats">Use my run stats to calculate goals</string>
    <string name="spinner_manager_init_error">Spinner Manager isn\'t initialized</string>
    <string name="date_picker_init_error">Date picker isn\'t initialized</string>
    <string name="select_date">Select date</string>
    <string name="map_init_error">Map is null</string>
    <string name="tracking_map_loading_message">Getting the map ready for your track…</string>
    <string name="completing_track_message">Finishing up, just a sec…</string>
    <string name="error_message_data_loading_failed">Oops! Something went wrong loading data. Please try again or refresh later.</string>
    <string name="dialog_delete_track_title">Confirm delete</string>
    <string name="dialog_delete_track_message">Are you sure you want to delete this track?</string>
    <string name="unexpected_error_message">Oops! Something went wrong. Please try again.</string>
    <string name="loading_data_message">Just a moment, loading your data...</string>


</resources>