<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".core.util.permission.LocationRequestFragment">

    <ImageView
        android:id="@+id/btBack"
        style="@style/TransparentButton"
        android:layout_marginStart="@dimen/space.regular"
        android:layout_marginTop="@dimen/space.regular"
        android:contentDescription="@string/move_back"
        android:src="@drawable/ic_cancel_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/empty_tracks_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/imageSize.illustration.big.height"
            android:layout_marginStart="@dimen/space.large"
            android:layout_marginEnd="@dimen/space.large"
            android:importantForAccessibility="no"
            android:src="@drawable/im_location_request" />

        <TextView
            style="@style/RegularText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space.large"
            android:gravity="center"
            android:text="@string/location_request_title" />

        <TextView
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space.large"
            android:layout_marginTop="@dimen/space.regular"
            android:layout_marginEnd="@dimen/space.large"
            android:gravity="center"
            android:text="@string/location_request_description" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bt_confirm_permission"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button.height.regular"
        android:layout_marginStart="@dimen/space.large"
        android:layout_marginEnd="@dimen/space.large"
        android:layout_marginBottom="@dimen/space.large"
        android:background="@drawable/bt_secondary"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvAllowPermission"
            style="@style/TitleText.Caps.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/allow" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>