<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_goals" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shape.strokeWidth"
        android:layout_marginTop="@dimen/space.small"
        android:layout_marginBottom="@dimen/space.regular"
        android:background="?colorSecondary" />

    <LinearLayout
        android:id="@+id/cardDistance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button.height.regular"
        android:background="@drawable/bt_outlined_on_primary_variant"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDistance"
            style="@style/RegularText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button.height.small"
            android:layout_marginStart="@dimen/space.regular"
            android:drawablePadding="@dimen/space.small"
            android:gravity="center"
            android:paddingStart="@dimen/space.small"
            android:paddingTop="@dimen/space.small"
            android:paddingEnd="@dimen/space.small"
            android:paddingBottom="@dimen/space.small"
            android:text="@string/distance"
            app:drawableStartCompat="@drawable/ic_distance_24dp" />

        <EditText
            android:id="@+id/etDistanceValue"
            style="@style/RegularText.Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="end"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor"
            tools:text="2.33333" />

        <TextView
            android:id="@+id/tvDistanceUnits"
            style="@style/RegularText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space.regular"
            android:gravity="end"
            android:text="@string/unit_km" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardDuration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button.height.regular"
        android:layout_marginTop="@dimen/space.small"
        android:background="@drawable/bt_outlined_on_primary_variant"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDuration"
            style="@style/RegularText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button.height.small"
            android:layout_marginStart="@dimen/space.regular"
            android:drawablePadding="@dimen/space.small"
            android:gravity="center"
            android:paddingStart="@dimen/space.small"
            android:paddingTop="@dimen/space.small"
            android:paddingEnd="@dimen/space.small"
            android:paddingBottom="@dimen/space.small"
            android:text="@string/duration"
            app:drawableStartCompat="@drawable/ic_duration_32dp" />

        <EditText
            android:id="@+id/etDurationValue"
            style="@style/RegularText.Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="end"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="4"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor"
            tools:text="120" />

        <TextView
            android:id="@+id/tvDurationUnits"
            style="@style/RegularText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space.regular"
            android:gravity="end"
            android:text="@string/unit_min" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardCalories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button.height.regular"
        android:layout_marginTop="@dimen/space.small"
        android:background="@drawable/bt_outlined_on_primary_variant"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCalories"
            style="@style/RegularText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button.height.small"
            android:layout_marginStart="@dimen/space.regular"
            android:drawablePadding="@dimen/space.small"
            android:gravity="center"
            android:paddingStart="@dimen/space.small"
            android:paddingTop="@dimen/space.small"
            android:paddingEnd="@dimen/space.small"
            android:paddingBottom="@dimen/space.small"
            android:text="@string/burned_kcal"
            app:drawableStartCompat="@drawable/ic_kcal_48dp" />

        <EditText
            android:id="@+id/etCaloriesValue"
            style="@style/RegularText.Gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space.regular"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="end"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="4"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor"
            tools:text="800" />

    </LinearLayout>

    <CheckBox
        style="@style/SmallText.Bold.Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/space.small"
        android:text="@string/auto_recalculate" />
</LinearLayout>