<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.workout_session.summary.WorkoutSummaryFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/btn_delete"
                style="@style/TransparentButton"
                android:layout_marginTop="@dimen/space.regular"
                android:layout_marginEnd="@dimen/space.regular"
                android:contentDescription="@string/delete_track"
                android:src="@drawable/ic_delete_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCongrats"
                style="@style/TabloidText.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.large"
                android:text="@string/great_job"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPaceTrack"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space.large"
                android:layout_marginTop="@dimen/space.regular"
                android:text="@string/pace_track"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCongrats" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chart.height"
                android:layout_marginStart="@dimen/space.regular"
                android:layout_marginTop="@dimen/space.small"
                android:layout_marginEnd="@dimen/space.regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPaceTrack" />

            <TextView
                android:id="@+id/tvDistance"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.regular"
                android:text="@string/distance"
                app:layout_constraintStart_toStartOf="@id/tvPaceTrack"
                app:layout_constraintTop_toBottomOf="@id/chart" />

            <TextView
                android:id="@+id/tvDistanceValue"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.regular"
                android:layout_marginEnd="@dimen/space.large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chart"
                tools:text="2.3 km" />

            <TextView
                android:id="@+id/tvDuration"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.small"
                android:text="@string/duration"
                app:layout_constraintStart_toStartOf="@id/tvPaceTrack"
                app:layout_constraintTop_toBottomOf="@id/tvDistance" />

            <TextView
                android:id="@+id/tvDurationValue"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.small"
                app:layout_constraintEnd_toEndOf="@id/tvDistanceValue"
                app:layout_constraintTop_toBottomOf="@id/tvDistance"
                tools:text="00:30:45" />

            <TextView
                android:id="@+id/tvAvgPaceValue"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.small"
                app:layout_constraintEnd_toEndOf="@id/tvDurationValue"
                app:layout_constraintTop_toBottomOf="@id/tvDuration"
                tools:text="4:53" />

            <TextView
                android:id="@+id/tvAvgPace"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.small"
                android:text="@string/avg_pace"
                app:layout_constraintStart_toStartOf="@id/tvPaceTrack"
                app:layout_constraintTop_toBottomOf="@id/tvDuration" />

            <TextView
                android:id="@+id/tvBestPace"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.small"
                android:text="@string/best_pace"
                app:layout_constraintStart_toStartOf="@id/tvPaceTrack"
                app:layout_constraintTop_toBottomOf="@id/tvAvgPace" />

            <TextView
                android:id="@+id/tvBestPaceValue"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.small"
                app:layout_constraintEnd_toEndOf="@id/tvAvgPaceValue"
                app:layout_constraintTop_toBottomOf="@id/tvAvgPace"
                tools:text="7:34" />

            <TextView
                android:id="@+id/tvCalories"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.small"
                android:text="@string/burned_kcal"
                app:layout_constraintStart_toStartOf="@id/tvPaceTrack"
                app:layout_constraintTop_toBottomOf="@id/tvBestPace" />

            <LinearLayout
                android:id="@+id/btn_map"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button.height.small"
                android:layout_marginTop="@dimen/space.regular"
                android:layout_marginBottom="@dimen/space.big"
                android:background="@drawable/bt_outlined_thirdly"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvCaloriesValue"
                app:layout_constraintTop_toBottomOf="@id/tvCaloriesValue">

                <ImageView
                    android:id="@+id/ivMap"
                    android:layout_width="@dimen/iconSize.medium"
                    android:layout_height="@dimen/iconSize.medium"
                    android:layout_marginStart="@dimen/space.small"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_map_32dp" />

                <TextView
                    android:id="@+id/tvGoToMap"
                    style="@style/RegularText.Gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/lag2"
                    android:text="@string/on_map" />

                <ImageView
                    android:id="@+id/ivGoToMap"
                    android:layout_width="@dimen/iconSize.small"
                    android:layout_height="@dimen/iconSize.small"
                    android:layout_marginEnd="@dimen/space.small"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_arrow_right_32dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvCaloriesValue"
                style="@style/RegularText.Gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space.small"
                app:layout_constraintEnd_toEndOf="@id/tvAvgPaceValue"
                app:layout_constraintTop_toBottomOf="@id/tvBestPace"
                tools:text="682" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button.height.regular"
        android:layout_marginStart="@dimen/space.large"
        android:layout_marginEnd="@dimen/space.large"
        android:layout_marginBottom="@dimen/space.large"
        android:background="@drawable/bt_secondary"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvSave"
            style="@style/TitleText.Caps.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/home" />

    </FrameLayout>

    <com.developers.sprintsync.core.util.view.LoadingOverlay
        android:id="@+id/view_loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
